# bwapi-rs

./: .travis.yml  Cargo.toml
.cargo/: config
examples/: session_lifetime.rs
src/: aimodule.rs  client.rs  frame.rs  lib.rs
src/bwapi/: mod.rs
src/bwapi/ai_module/: mod.rs
src/bwapi/position/: mod.rs
src/bwapi/unit/: mod.rs
