[package]
name = "bwapi"
version = "0.1.0"
authors = ["Dmitry Kashitsyn <korvin@deeptown.org>", "Roman Proskuryakov <humbug@deeptown.org>"]
keywords = ["starcraft", "broodwar", "api", "binding"]
repository = "https://github.com/RnDome/bwapi-rs"
description = "Rust bindings to the Starcraft Broodwar game API"
license = "Unlicense/MIT"

[dependencies.zmq]
version = "0.8"
default-features = false # disable zmq_has

[dependencies.url]
git = "https://github.com/servo/rust-url"
